<resources>
    <string name="app_name">ProyectoBeta</string>
    <string name="usuario">Usuario:</string>
    <string name="contrase_a">Contraseña</string>
    <string name="login" >Login</string>
    <string name="hint_usuario">Introduzca el usuario</string>
    <string name="hint_contra">Introduzca la contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="regist">¿No tienes una cuenta?</string>
    <string name="introduzca_su_usuario">Introduzca su usuario</string>
    <string name="introduzca_su_correo">Introduzca su correo</string>
    <string name="ya_te_has_registrado">¿Ya te has registrado?</string>
    <string name="repita_la_contrase_a">Repita la contraseña</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="registro">Registrarse</string>
    <string name="fecha">01/01/2000</string>
    <string name="introduzca_la_contrase_a">Introduzca la contraseña</string>
    <string name="cuenta">Cuenta</string>
    <string name="lista">Lista</string>

    <string-array name="account_types">
        <item>Admin</item>
        <item>Normal</item>
    </string-array>
</resources>